# a-maze-ing

./: Makefile  README.md  a-maze-ing.py  config.txt  man.txt  maze.txt  pyproject.toml
src/: a-maze-ing.py  a_maze_ing.py  maze_display.py  maze_parser.py
src/mazegen/: __init__.py  generator.py
